--- a/middle/Cargo.toml
+++ b/middle/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["Josh Matthews <josh@joshmatthews.net>"]
 
 [dependencies]
-base = { path = "../base" }
+#base = { path = "../base" }
+base_api = { path = "../base_api" }
